<resources>
    <string name="app_name">CodingTask</string>
    <string name="change_currency">change currency</string>
    <string name="convert">Convert</string>
    <string name="empty_field">The field is empty</string>
    <string name="exit">Exit</string>
    <string name="amount">amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="reload">Reload</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="unknown_error">An unknown error occurred</string>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>