<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".ui.detail.DetailFragment">

    <ImageView
        android:id="@+id/ivCross"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/exit"
        android:src="@drawable/ic_cross"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/dark_card"
        android:paddingTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tvResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/clView"
        app:layout_constraintEnd_toEndOf="@+id/clView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/clView"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/white_card_strongly_rounded"
        android:translationZ="-2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:autofillHints="@string/amount"
            android:cursorVisible="false"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/spinnerLeft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            app:layout_constraintBottom_toTopOf="@+id/spinnerLeft"
            app:layout_constraintStart_toStartOf="@+id/spinnerLeft" />

        <TextView
            android:id="@+id/tvFTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            app:layout_constraintBottom_toTopOf="@+id/spinnerRight"
            app:layout_constraintStart_toStartOf="@+id/spinnerRight" />

        <Spinner
            android:id="@+id/spinnerRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@null"
            android:minHeight="48dp"
            android:popupBackground="@android:color/transparent"
            android:popupElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerLeft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinnerLeft"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/ivChange"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/change_currency"
            android:src="@drawable/change"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerLeft"
            app:layout_constraintEnd_toStartOf="@+id/spinnerRight"
            app:layout_constraintStart_toEndOf="@+id/spinnerLeft"
            app:layout_constraintTop_toTopOf="@+id/spinnerLeft" />


        <Spinner
            android:id="@+id/spinnerLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@null"
            android:minHeight="48dp"
            android:popupBackground="@android:color/transparent"
            android:popupElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnConvert"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAmount"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnConvert"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/convert"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/dark_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerLeft" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>